# btrdb-python

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  DESCRIPTION.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  release.sh  requirements-all-locked.txt  requirements-all.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pre-commit.yaml  release.yaml
benchmarks/: benchmark_stream_inserts.py  benchmark_stream_reads.py  benchmark_streamset_inserts.py  benchmark_streamset_reads.py
btrdb/: __init__.py  collection.py  conn.py  endpoint.py  errors.py  exceptions.py  point.py  stream.py  transformers.py  version.py
btrdb/grpcinterface/: README.md  btrdb.proto  btrdb_pb2.py  btrdb_pb2.pyi  btrdb_pb2_grpc.py
btrdb/utils/: buffer.py  conversion.py  credentials.py  general.py  query.py  ray.py  timez.py
btrdb4/: __init__.py  btrdb_pb2.py  btrdb_pb2_grpc.py  endpoint.py  generate.sh  utils.py
btrdb4/grpcinterface/: btrdb.proto
docs/: Makefile  requirements.txt
docs/source/: adding_data.rst  concepts.rst  conf.py  explained.rst  index.rst  installing.rst  metadata.rst  quick-start.rst  working.rst
docs/source/api/: conn.rst  exceptions.rst  package.rst  points.rst  streams.rst  transformers.rst  utils-timez.rst
docs/source/maintainers/: anaconda.rst
docs/source/working/: multiprocessing.rst  ray.rst  server.rst  stream-manage-data.rst  stream-manage-metadata.rst  stream-query-manage.rst  stream-view-data.rst  streamsets.rst
tests/: requirements.txt
tests/btrdb/: test_arrow_streams.py  test_base.py  test_conn.py  test_point.py  test_stream.py  test_transformers.py
tests/btrdb/integration/: conftest.py  test_conn.py  test_stream.py  test_streamset.py
tests/btrdb/utils/: test_buffer.py  test_conversions.py  test_credentials.py  test_general.py  test_timez.py
tests/btrdb4/: test_base.py  test_import.py
tests/btrdb_integration/: conftest.py  test_conn.py  test_regressions.py  test_stream.py  test_streamset.py
