[metadata]
description-file = DESCRIPTION.md
license_file = LICENSE.txt

[aliases]
test=pytest

[tool:pytest]
addopts = --cov=btrdb --flake8
python_files = tests/*
flake8-ignore =
    E121
    E128
    E201
    E202
    E221
    E231
    E251
    E266
    E302
    E303
    E501
    F401
    W391
    tests/* ALL
    btrdb/grpcinterface/btrdb_pb2.py UnusedImport
    btrdb/__init__.py UnusedImport
