[metadata]
description-file = DESCRIPTION.md
license_file = LICENSE.txt

[aliases]
test=pytest

[tool:pytest]
addopts = --cov=btrdb
python_files = tests/*

[flake8]
flake8-ignore =
    E111
    E114
    E121
    E122
    E123
    E124
    E128
    E201
    E202
    E221
    E222
    E225
    E226
    E231
    E241
    E251
    E266
    E271
    E302
    E303
    E402
    E501
    E502
    E701
    E731
    F401
    W292
    W293
    W391
    tests/* ALL
    btrdb/grpcinterface/btrdb_pb2.py ALL
    btrdb/__init__.py ALL
    setup.py ALL

